--- a/Biol607/Project/Biol607.html
+++ b/Biol607/Project/Biol607.html
@@ -378,6 +378,7 @@ Why is Body Mass relevant?
 <div class="column" style="width:40%;">
 <p><img data-src="Biol607_files/pics/slide3a.png" class="absolute" style="top: 35px; right: 650px; width: 550px; height: 700px; "></p>
 </div><div class="column" style="width:60%;">
+<div style="font-size: 32px;">
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
 <div class="callout-title">
@@ -387,8 +388,9 @@ Why is Body Mass relevant?
 <p><strong>How to get Body Mass?</strong></p>
 </div>
 <div class="callout-content">
-<p>Get body mass extant species =&gt; weigh</p>
-<p>Get body mass extinct species =&gt; Prediction</p>
+<p>Getting body mass from extant species =&gt; weigh</p>
+<p>Getting body mass from extinct species =&gt; Prediction</p>
+</div>
 </div>
 </div>
 </div>
@@ -399,17 +401,198 @@ Why is Body Mass relevant?
 <section id="section-2" class="slide level2">
 <h2></h2>
 <h3>
-<p>Sample <br></p>
-<div class="columns">
-<div class="column" style="width:40%;">
-<p>BM ~ 0.16 Cfemur 2.73 (Anderson et al 1985)</p>
-<p>BM ~ 2.411 log10 Cfemur – 0.065 (Cambell Jr &amp; Marcus 1992)</p>
-<p>BM ~ 2.4 log Cfemur – 0.11 (Field et al 2013)</p>
-<p>BM ~ 2.754 log Cfemur – 0.683 (Campione et al 2014)</p>
-</div><div class="column" style="width:60%;">
-<div class="cell plot-padding">
+Extant-scaling approach
+</h3>
+<div class="columns" style="display: flex !important">
+<div class="column" style="display: flex; justify-content: center; align-items: center;">
+<div style="font-size: 14px;">
+<table>
+<colgroup>
+<col style="width: 37%">
+<col style="width: 62%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Author</th>
+<th>Model</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Anderson et al 1985</td>
+<td>BM ~ 0.16 FemurCirc 2.73</td>
+</tr>
+<tr class="even">
+<td>Cambell Jr &amp; Marcus 1992</td>
+<td>log10 BM ~ 2.411 log10 FemurCirc – 0.065</td>
+</tr>
+<tr class="odd">
+<td>Field et al 2013</td>
+<td>log BM ~ 2.4 log FemurCirc – 0.11</td>
+</tr>
+<tr class="even">
+<td>Campione et al 2014</td>
+<td>log BM ~ 2.754 log FemurCirc – 0.683</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div><div class="column" style="width:70%;">
+<div class="cell" data-fig.dim="[16,12]" data-font-size="0.5em">
 <div class="cell-output-display">
-<p><img data-src="Biol607_files/figure-revealjs/unnamed-chunk-2-1.png" width="960"></p>
+<div id="fig-1Sample" class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="Biol607_files/figure-revealjs/fig-1Sample-1.png" width="1536"></p>
+<figcaption>Figure&nbsp;1: Bias in datasets - No Palaeognathae observation</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="section-3" class="slide level2">
+<h2></h2>
+<h3>
+Palaeognathae position
+</h3>
+<p><img data-src="Biol607_files/pics/slide5a.jpg" class="absolute" style="top: 160px; right: -220px; width: 650px; height: 450px; "></p>
+<div class="cell">
+<div class="cell-output-display">
+<p><img data-src="Biol607_files/figure-revealjs/unnamed-chunk-3-1.png" style="width:60.0%"></p>
+</div>
+</div>
+<div style="font-size: 28px;">
+<div class="callout callout-note callout-titled callout-style-simple">
+<div class="callout-body">
+<div class="callout-title">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<p><strong>Palaeognathae group:</strong></p>
+</div>
+<div class="callout-content">
+<p>Heaviest modern birds (extant species)</p>
+<p>Flightless birds ~ Theropods</p>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="section-4" class="slide level2">
+<h2></h2>
+<p><img data-src="Biol607_files/pics/slide6a.png" class="absolute" style="top: 0px; right: 400px; width: 800px; height: 300px; "> <img data-src="Biol607_files/pics/slide6b.png" class="absolute" style="top: 300px; right: -200px; width: 800px; height: 300px; "></p>
+<p><br><br><br><br><br><br></p>
+<div class="columns" style="display: flex !important">
+<div class="column" style="display: flex; justify-content: center; align-items: center;">
+<div style="font-size: 40px;">
+<div class="callout callout-tip callout-style-simple">
+<div class="callout-body">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-content">
+<p>Could I improve the model to predict Body Mass in Dinosaurs, if I included samples from the Palaeognathae group?</p>
+</div>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:70%;">
+
+</div>
+</div>
+</section>
+<section id="dataset-the-first-problem" class="slide level2">
+<h2>Dataset: the first problem</h2>
+<p><br></p>
+<div style="font-size: 20px;">
+<table style="width:100%;">
+<colgroup>
+<col style="width: 15%">
+<col style="width: 21%">
+<col style="width: 36%">
+<col style="width: 26%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Species</th>
+<th style="text-align: center;">Body Mass (g)</th>
+<th style="text-align: center;">Femur Circumference (mm)</th>
+<th style="text-align: center;">Femur lenght (mm)</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>species 1</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="even">
+<td>species 1</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="odd">
+<td>species 2</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="even">
+<td>species 3</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="odd">
+<td>species 4</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="even">
+<td>species 5</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="odd">
+<td>species 5</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="even">
+<td>species 6</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="odd">
+<td>species 7</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+</tr>
+<tr class="even">
+<td>species 7</td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">x</td>
+<td style="text-align: center;">x</td>
+</tr>
+</tbody>
+</table>
+</div>
+</section>
+<section id="section-5" class="slide level2">
+<h2></h2>
+<div class="cell" data-reveal="true">
+<div class="cell-output-display">
+<div>
+<div>
+<pre class="mermaid mermaid-js"></pre>
 </div>
 </div>
 </div>
@@ -417,7 +600,7 @@ Why is Body Mass relevant?
 <div class="footer footer-default">
 
 </div>
-</h3></section>
+</section>
     </div>
   </div>
 
@@ -600,10 +783,10 @@ Why is Body Mass relevant?
         height: 700,
 
         // Factor of the display size that should remain empty around the content
-        margin: 0.1,
+        margin: 0,
 
         math: {
-          mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js',
+          mathjax: 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js',
           config: 'TeX-AMS_HTML-full',
           tex2jax: {
             inlineMath: [['\\(','\\)']],
