--- a/Biol607/Project/Biol607.html
+++ b/Biol607/Project/Biol607.html
@@ -348,7 +348,7 @@ Viviana Romero Alarcon - Biol 607
 Why is Body Mass relevant?
 </h3>
 <div class="columns" style="display: flex !important">
-<div class="column" style="width:40%;">
+<div class="column" style="display: flex; justify-content: center; align-items: center;">
 <p><img data-src="Biol607_files/pics/slide2.png" class="absolute" style="top: 100px; right: 630px; width: 450px; height: 600px; "></p>
 </div><div class="column" style="display: flex; justify-content: center; align-items: center;">
 <div class="cell" data-reveal="true">
@@ -373,10 +373,10 @@ Why is Body Mass relevant?
 </section>
 <section id="section-1" class="slide level2">
 <h2></h2>
-<div class="columns">
-<div class="column" style="width:40%;">
+<div class="columns" style="display: flex !important">
+<div class="column" style="display: flex; justify-content: center; align-items: center;">
 <p><img data-src="Biol607_files/pics/slide3a.png" class="absolute" style="top: 35px; right: 650px; width: 550px; height: 700px; "></p>
-</div><div class="column" style="width:60%;">
+</div><div class="column" style="display: flex; justify-content: center; align-items: center;">
 <div style="font-size: 32px;">
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
@@ -436,7 +436,7 @@ Extant-scaling approach
 </tbody>
 </table>
 </div>
-</div><div class="column" style="width:70%;">
+</div><div class="column" style="display: flex; justify-content: center; align-items: center;">
 <div class="cell" data-fig.dim="[16,12]" data-font-size="0.5em">
 <div class="cell-output-display">
 <div id="fig-1Sample" class="quarto-figure quarto-figure-center">
@@ -1123,32 +1123,14 @@ Palaeognathae position
 <img data-src="Biol607_files/pics/experimentalDesign4.png" class="r-stretch"></section>
 <section id="section-9" class="slide level2">
 <h2></h2>
-<div class="cell">
-<div class="cell-output cell-output-stdout">
-<pre><code>
-Call:
-ss(x = avesFCBM.train$FemurCirc, y = avesFCBM.train$BM.g, method = "AIC", 
-    nknots = 50)
-
-Smoothing Parameter  spar = -0.1670312   lambda = 3.702769e-09
-Equivalent Degrees of Freedom (Df) 18.64836
-Penalized Criterion (RSS) 11477065277
-Akaike's Information Criterion (AIC) 66849.94 </code></pre>
-</div>
-<div class="cell-output cell-output-stdout">
-<pre><code>
-Call:
-ss(x = avesFCBM.train$FemurCirc, y = avesFCBM.train$BM.g, method = "AIC", 
-    nknots = c(35, 50))
-
-Smoothing Parameter  spar = -0.08547402   lambda = 1.437985e-08
-Equivalent Degrees of Freedom (Df) 13.97175
-Penalized Criterion (RSS) 11609853925
-Akaike's Information Criterion (AIC) 66883.84 </code></pre>
+<div class="columns">
+<div class="column" style="width:50%;">
+<div class="cell" data-fig.dim="[16,12]" data-font-size="1em">
+<div class="cell-output-display">
+<p><img data-src="Biol607_files/figure-revealjs/unnamed-chunk-12-1.png" width="1536"></p>
 </div>
 </div>
-
-<img data-src="Biol607_files/figure-revealjs/unnamed-chunk-12-1.png" width="1536" class="r-stretch"><div class="cell" data-font-size="0.5em">
+<div class="cell" data-font-size="0.5em">
 <div class="cell-output-display">
 
 <div id="pdhrfozjcz" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
@@ -1630,6 +1612,19 @@ Akaike's Information Criterion (AIC) 66883.84 </code></pre>
   
   
 </table>
+</div>
+</div>
+</div>
+</div><div class="column" style="width:50%;">
+<div class="cell">
+<div class="cell-output-display">
+<p><img data-src="Biol607_files/figure-revealjs/unnamed-chunk-15-1.png" width="960"></p>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img data-src="Biol607_files/figure-revealjs/unnamed-chunk-17-1.png" width="960"></p>
+</div>
 </div>
 </div>
 </div>
